[package]
name = "rust-hftish-trade"
version = "0.1.0"
authors = ["Daniel Bank <daniel.p.bank@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpaca-finance = "0.2.1"
chrono = "0.4.13"
futures = "0.3.5"
structopt = "0.3.15"
tokio = "0.2.21"